website inuque features

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
     scroll-behavior: smooth !important;
   }
   body {
-    @apply bg-ff  text-[#5f6c7b] dark:text-[#94a1b2] tracking-wide  duration-[150ms] ease-linear select-none;
+    @apply bg-ff  text-[#5f6c7b] dark:text-[#94a1b2] tracking-wide  duration-[150ms] ease-linear select-none overflow-x-auto;
   }
 
   h1,
